test_case/rust-lang_rust/61733_716188981_2.rs
rust
fn foo() {
    { 0 }

    empty!(); //~ ERROR: mismatched types
}
